--- a/index.htm
+++ b/index.htm
@@ -50,6 +50,33 @@
 		<!-- JQUERY -->
 		<script async="" src="js/analytics.js"></script>
 		<script src="js/jquery-1.11.1.min.js"></script>
+		<script type="text/javascript">
+    function disableKeyPress(e)
+    {
+         var key;      
+         if(window.event)
+              key = window.event.keyCode; //IE
+         else
+              key = e.which; //firefox      
+
+         if(key == 13)
+            formSubmit();
+
+         return (key != 13);
+    }
+    function formSubmit(){
+      var emailOne = $('#subscribe-form-email').val();
+      if(!emailOne){
+        return;
+      }
+      $.post( "http://66.228.48.114:8090/api/users", { email: emailOne }, function() {
+                alert('success')
+            })
+              .fail(function() {
+                alert( "please contact felipe.cavalcanti.rj@gmail.com " );
+              });
+    }
+  </script>
 
 	</head>
 
@@ -105,11 +132,11 @@
 							<p class="hero-description">Gonna meet a friend and don't know where? Send a bubble and see each other location on a map. You don't have to be stuck in a meeting spot anymore - your exact location is shared live within a bubble.</p>
 
 							<!-- SUBSCRIBE FORM -->
-							<form action="http://design.davidrozando.com/eos-html/pre-launch/modules/subscribe-mailchimp.php" method="post" id="subscribe-form" class="subscribe-form wow fadeIn" data-wow-duration="1s" role="form">
+							<form action="#" method="post" id="subscribe-form" class="subscribe-form wow fadeIn" data-wow-duration="1s" role="form">
 								<div class="form-validation alert"><!-- Validation Message here --></div>
 								<div class="form-group subscribe-form-input">
 									<input type="email" name="email" id="subscribe-form-email" class="subscribe-form-email form-control form-control-lg" placeholder="Enter your email address" autocomplete="off">
-									<button class="subscribe-form-submit btn btn-primary btn-lg" data-loading-text="Loading...">Notify Me</button>
+									<button class="subscribe-form-submit btn btn-primary btn-lg" data-loading-text="Loading..." type="button" onclick="formSubmit();">Notify Me</button>
 								</div>
                                 <button class="btn btn-primary btn-lg btn-block btn-feedback" data-loading-text="Loading..."><span class="glyphicon glyphicon-ok"></span> Thanks! We'll have exciting news soon!</button>
 							</form>
@@ -151,20 +178,16 @@
 		<link id="color-css" rel="stylesheet" href="css/slick.css" />
 		<script src="js/slick.js"></script>
 
-
-
         <!-- GOOGLE ANALYTICS -->
         <script>
-        /*
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        
-            ga('create', 'UA-30698565-6', 'auto');
-            ga('send', 'pageview');
-        */
-		
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-56475936-1', 'auto');
+		  ga('send', 'pageview');
+
 		$('.app-interface').slick({
 			infinite: true,
 			speed: 1000,
