Improved meta keywords & description

--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,8 @@
 		<meta charset="UTF-8">
 
 		<!-- METADATA -->
-		<meta name="description" content="A Responsive Bootstrap App Landing Page Template">
-		<meta name="keywords" content="EOS, Bootstrap, Landing page, Template, App, Mobile, Android, iOS">
+		<meta name="description" content="The easiest way to share your location">
+		<meta name="keywords" content="bubbl, geolocation, map, location app, meet, date">
 		<meta name="author" content="Felipe Cavalcanti, Felipe Velloso">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -190,7 +190,7 @@
 
 		$('.app-interface').slick({
 			infinite: true,
-			speed: 1000,
+			speed: 1500,
 			fade: true,
 			slide: '.app-screen',
 			arrows: false,
@@ -198,7 +198,7 @@
 			slidesToShow: 1,
 			slidesToScroll: 1,
 			autoplay: true,
-			autoplaySpeed: 2000,
+			autoplaySpeed: 2500,
 		});
         </script>
 
