--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
 						<div class="hero-text">
 							
 							<!-- LOGO -->
-							<img src="img/hero-logo-white.png" alt="EOS - App Landing Page Template" class="hero-logo">
+							<img src="img/hero-logo-white.png" alt="Bubbl" class="hero-logo">
 
 							<!-- TAGLINE -->
 							<h1 class="hero-title">The easiest way to <br/>share your location</h1>
@@ -143,7 +143,7 @@
 							</form>
 
 							<!-- HERO DESCRIPTION -->
-							<p class="hero-release"><i class="fa fa-apple"></i><i class="fa fa-android"></i><i class="fa fa-windows hidden"></i></p>
+							<p class="hero-release" title="Soon on the App Stores!"><i class="fa fa-apple"></i><i class="fa fa-android"></i><i class="fa fa-windows hidden"></i></p>
 
 						</div>
 					</div>
