Mkt page test 2

--- a/carnaval/carnaval-view.html
+++ b/carnaval/carnaval-view.html
@@ -147,7 +147,7 @@ $(document).ready(function(){
   }
   db = null;
 
-  var url = 'http://www.wikirio.com.br/Blocos_do_Carnaval_2015_na_cidade_do_Rio_de_Janeiro'; //'content/blocos-2015.html';
+  var url = 'content/blocos-2015.html'; //'http://www.wikirio.com.br/Blocos_do_Carnaval_2015_na_cidade_do_Rio_de_Janeiro';
 
   doAjax(url);
 
