--- a/index.htm
+++ b/index.htm
@@ -5,13 +5,13 @@
 		<meta charset="UTF-8">
 
 		<!-- METADATA -->
-		<meta name="description" content="The easiest way to share your location">
+		<meta name="description" content="Encontre seus amig@s de forma fácil! O Bubbl é um app para compartilhar e acompanhar a localização de amigos próximos.">
 		<meta name="keywords" content="bubbl, geolocation, map, location app, meet, date">
 		<meta name="author" content="Felipe Cavalcanti, Felipe Velloso">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<!-- PAGE TITLE -->
-		<title>Bubbl</title>
+		<title>Bubbl | The easiest way to share your location</title>
 
 		<!-- FAVICON -->
 		<link rel="icon" href="img/favicon.png">
