Google Play Download Button

--- a/index.htm
+++ b/index.htm
@@ -123,17 +123,26 @@
 							<p class="hero-description">Encontre seus amig@s de forma fácil! O Bubbl é um app para compartilhar e acompanhar a localização de amigos próximos. <br/>É grátis e simples de usar!</p>
 
 							<!-- SUBSCRIBE FORM -->
-							<form id="subscribe-form" class="subscribe-form wow fadeIn" data-wow-duration="1s" role="form">
-								<div class="form-validation alert"><!-- Validation Message here --></div>
-								<div class="form-group subscribe-form-input">
-									<input type="email" name="email" id="subscribe-form-email" class="subscribe-form-email form-control form-control-lg" placeholder="Seu e-mail" autocomplete="off">
-									<button class="subscribe-form-submit btn btn-primary btn-lg" data-loading-text="Loading..." type="button" onclick="formSubmit();">Me avisa!</button>
-								</div>
-                                <button class="btn btn-primary btn-lg btn-block btn-feedback" data-loading-text="Loading..." id="feedbackButton" name="feedbackButton" type="button"><span class="glyphicon glyphicon-ok"></span> Thanks! We'll have exciting news soon!</button>
-							</form>
+							<p class="download-buttons">
+								<!-- PLAY STORE DOWNLOAD -->
+								<a href="https://play.google.com/store/apps/details?id=bubbl.bros" class="btn btn-app-download btn-primary">
+									<i class="fa fa-android"></i>
+									<strong>Download App</strong> <span>from Play Store</span>
+								</a>
+								<!-- APP STORE DOWNLOAD -->
+								<a href="#ios-soon" class="btn btn-app-download btn-ios disabled">
+									<i class="fa fa-apple"></i>
+									<strong>Em breve </strong> <span>para iPhone</span>
+								</a>
+								<!-- WINDOWS PHONE STORE DOWNLOAD -->
+								<!--<a href="#please-edit-this-link" class="btn btn-app-download btn-windows-phone">
+									<i class="fa fa-windows"></i>
+									<strong>Download App</strong> <span>from Windows Store</span>
+								</a>-->
+							</p>
 
 							<!-- HERO DESCRIPTION -->
-							<p class="hero-release" title="Soon on the App Stores!"><i class="fa fa-apple"></i><i class="fa fa-android"></i><i class="fa fa-windows hidden"></i></p>
+							<p class="hero-release hidden" title="Soon on the App Stores!"><i class="fa fa-apple"></i><i class="fa fa-android"></i><i class="fa fa-windows hidden"></i></p>
 
 						</div>
 					</div>
