EULA page added
Added formatted EULA page v1

--- a/index.htm
+++ b/index.htm
@@ -130,7 +130,7 @@
 									<strong>Download App</strong> <span>from Play Store</span>
 								</a>
 								<!-- APP STORE DOWNLOAD -->
-								<a href="#ios-soon" class="btn btn-app-download btn-ios disabled">
+								<a href="#ios-soon" class="btn btn-app-download btn-ios disabled hidden-xs hidden-sm">
 									<i class="fa fa-apple"></i>
 									<strong>Em breve </strong> <span>para iPhone</span>
 								</a>
