changing keywords and adding google site verification

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,8 @@
 
 		<!-- METADATA -->
 		<meta name="description" content="Encontre seus amig@s de forma fácil! O Bubbl é um app para compartilhar e acompanhar a localização de amigos próximos.">
-		<meta name="keywords" content="bubbl, geolocation, map, location app, meet, date">
+		<meta name="keywords" content="share location, meet friends, reconnect people, geolocation app">
+		<meta name="google-site-verification" content="ffMA9Tr1TxK1ghddiPqwmj7kRXfmLhl4qnCusskJwGU" />
 		<meta name="author" content="Felipe Cavalcanti, Felipe Velloso">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
