New tagline & short description (PT-BR)

--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<!-- PAGE TITLE -->
-		<title>Bubbl | The easiest way to share your location</title>
+		<title>Bubbl | Uma nova forma de encontrar com seus amigos</title>
 
 		<!-- FAVICON -->
 		<link rel="icon" href="img/favicon.png">
@@ -118,17 +118,17 @@
 							<img src="img/hero-logo-white.png" alt="Bubbl" class="hero-logo">
 
 							<!-- TAGLINE -->
-							<h1 class="hero-title">The easiest way to <br/>share your location</h1>
+							<h1 class="hero-title">Encontre com seus amigos <br/>de uma nova forma</h1>
 
 							<!-- HERO DESCRIPTION -->
-							<p class="hero-description">Encontre seus amig@s de forma fácil! O Bubbl é um app para compartilhar e acompanhar a localização de amigos próximos. <br/>É grátis e simples de usar!</p>
+							<p class="hero-description">Veja facilmente onde eles estão, em tempo real, direto do seu celular. É <strong>grátis</strong> e com privacidade garantida.</p>
 
 							<!-- SUBSCRIBE FORM -->
 							<p class="download-buttons">
 								<!-- PLAY STORE DOWNLOAD -->
 								<a href="https://play.google.com/store/apps/details?id=bubbl.bros" class="btn btn-app-download btn-primary">
 									<i class="fa fa-android"></i>
-									<strong>Download App</strong> <span>from Play Store</span>
+									<strong>Baixe grátis</strong> <span>Na Play Store</span>
 								</a>
 								<!-- APP STORE DOWNLOAD -->
 								<a href="#ios-soon" class="btn btn-app-download btn-ios disabled hidden-xs hidden-sm">
